base/src/test/resources/failure/patterns/issues-archived/issue354-confl.aya.txt
In file $FILE:9:4 ->

   5 | open data Int : Type
   6 |  | pos Nat
   7 |  | neg Nat { | zero => pos zero }
                      ^--------------^ relevant condition
   8 | 
   9 | def abs (n : Int) : Nat
  10 |  | pos n => suc n
          ^------------^ substituted to `suc zero`
  11 |  | neg n => n
          ^--------^ substituted to `zero`

Error: The 2nd clause matches on a constructor with condition(s). When checking the
       1st condition, we failed to unify `zero` and `suc zero`

1 error(s), 0 warning(s).
What are you doing?
